--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -22,7 +22,7 @@
         <div class="mt-6 sm:mt-8 fade-in-button">
 
         <button>
-          <a href="https://l3networks.timezest.com/sales/meeting-15" class="block w-auto px-6 py-2.5 mx-auto text-lg font-semibold text-white transition-all ease-in-out bg-teal-500 rounded-full hover:bg-teal-600">
+          <a href="/book-appointment/" class="block w-auto px-6 py-2.5 mx-auto text-lg font-semibold text-white transition-all ease-in-out bg-teal-500 rounded-full hover:bg-teal-600">
             <div class="flex items-center gap-2">Book An Appointment <img src="/images/icons/ArrowUpRightWhite.svg" alt="Book An Appointment"></div>
           </a>
         </button>
@@ -907,7 +907,7 @@
             Schedule a 15-minute Right-Fit Call and get a fast read on what it will take to stabilize, optimize, or transform your environment.
           </p>
           <div class="ctaRF__actions">
-            <a href="https://l3networks.timezest.com/sales/meeting-15" class="inline-flex w-auto px-6 py-2.5 text-lg font-semibold text-white transition-all ease-in-out bg-teal-500 rounded-full hover:bg-teal-600">
+            <a href="/book-appointment/" class="inline-flex w-auto px-6 py-2.5 text-lg font-semibold text-white transition-all ease-in-out bg-teal-500 rounded-full hover:bg-teal-600">
               <div class="flex items-center gap-2">Schedule a Right-Fit Call <img src="/images/icons/ArrowUpRightWhite.svg" alt="Schedule a Right-Fit Call"></div>
             </a>
           </div>
