--- a/src/_includes/layouts/marketing/lead-gen1.html
+++ b/src/_includes/layouts/marketing/lead-gen1.html
@@ -31,7 +31,7 @@
 
         <script async data-uid="cb769622c6" src="https://l3networks.kit.com/cb769622c6/index.js"></script>
         
-        <p class="pt-3 text-sm text-center text-slate-400">Wanna skip the guide? <a href="https://l3networks.timezest.com/sales/meeting-15" class="underline hover:text-teal-500">Book an appointment</a></p>
+        <p class="pt-3 text-sm text-center text-slate-400">Wanna skip the guide? <a href="/book-appointment/" class="underline hover:text-teal-500">Book an appointment</a></p>
 
       </div>
 
