--- a/src/_includes/layouts/alldeskai copy.html
+++ b/src/_includes/layouts/alldeskai copy.html
@@ -23,7 +23,7 @@
     <div class="pl-[100px]">
       <p class="mt-4 text-3xl font-light">AI-Enabled Helpdesk, Delivered as a Single Scalable Service</p>
       <button class="block mt-10">
-        <a href="https://l3networks.timezest.com/sales/meeting-15"
+          <a href="/book-appointment/"
           class="block w-auto px-6 py-2.5 mx-auto text-base text-teal-500 transition-all ease-in-out border border-teal-500 rounded-full hover:bg-teal-500 hover:text-white mt-8">
           <div class="flex items-center gap-2">Book An Appointment <img src="/images/icons/ArrowUpRightWhite.svg" alt="Book An Appointment"></div>
         </a>
@@ -430,7 +430,7 @@
       How Onboarding Works
     </h2>
 
-    <a href="https://l3networks.timezest.com/sales/meeting-15" class="relative inline-flex items-center gap-3 group text-neutral-400">
+    <a href="/book-appointment/" class="relative inline-flex items-center gap-3 group text-neutral-400">
       <span class="text-base md:text-lg">Get in touch</span>
       <svg viewBox="0 0 24 24" class="transition-transform duration-300 size-6 group-hover:translate-x-1">
         <path d="M5 12h12m0 0-5-5m5 5-5 5" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
