--- a/src/_includes/layouts/marketing/base.html
+++ b/src/_includes/layouts/marketing/base.html
@@ -17,8 +17,11 @@
 </head> 
 
 
-<body class="relative bg-black font-open">
+<body class="relative bg-black font-open" x-data="{ 'showModal': false }" @keydown.escape="showModal = false">
+  {% include "partials/site-headB.html" %}
+  {% include "partials/site-head-mobile.html" %}
   <main tabindex="-1" id="main-content">{% block content %}{% endblock %}</main>
+  {% include "partials/footer.html" %}
   <script defer src="/js/alpinecollapse-cdn.min.js"></script>
   <script defer src="/js/alpine-cdn.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
