--- a/src/_includes/layouts/marketing/thankyou.html
+++ b/src/_includes/layouts/marketing/thankyou.html
@@ -30,7 +30,7 @@
               <strong class="font-bold">Check your email</strong> for the guide and start exploring actionable insights right away.
             </li>
             <li>
-              <strong class="font-bold">Have questions? Need help?</strong> Consider booking an appointment with our <a class="underline hover:text-blue-600" href="https://l3networks.timezest.com/sales/meeting-15">team</a>.
+              <strong class="font-bold">Have questions? Need help?</strong> Consider booking an appointment with our <a class="underline hover:text-blue-600" href="/book-appointment/">team</a>.
           </ul>
 
           <div class="flex flex-col items-center gap-5 px-4 py-4 text-white bg-blue-800 md:py-2 md:flex-row rounded-xl ">
