--- a/src/_includes/layouts/product-item.html
+++ b/src/_includes/layouts/product-item.html
@@ -33,7 +33,7 @@
       </div> --> #}
     </div>
     <button>
-      <a href="https://l3networks.timezest.com/sales/meeting-15" class="block w-auto px-6 py-2.5 mx-auto text-lg font-semibold text-white transition-all ease-in-out bg-teal-500 rounded-full hover:bg-teal-600 mt-8">
+      <a href="/book-appointment/" class="block w-auto px-6 py-2.5 mx-auto text-lg font-semibold text-white transition-all ease-in-out bg-teal-500 rounded-full hover:bg-teal-600 mt-8">
         <div class="flex items-center gap-2">Book An Appointment <img src="/images/icons/ArrowUpRightWhite.svg" alt="Book An Appointment"></div>
       </a>
     </button>
