--- a/src/_includes/partials/site-headB.html
+++ b/src/_includes/partials/site-headB.html
@@ -36,7 +36,7 @@
         <li class="px-6 py-3"><a class="text-slate-100 hover:text-slate-300" href="/elevate/">Elevate</a></li>
         <li class="px-6 py-3"><a class="text-slate-100 hover:text-slate-300" href="/about-us/">About Us</a></li>
         <li class="py-2 pl-3">
-          <a class="block px-5 py-1 mx-auto text-base text-white transition-all ease-in-out bg-teal-500 rounded-full hover:bg-teal-700" href="https://l3networks.timezest.com/sales/meeting-15">
+          <a class="block px-5 py-1 mx-auto text-base text-white transition-all ease-in-out bg-teal-500 rounded-full hover:bg-teal-700" href="/book-appointment/">
             <div class="flex items-center gap-2">
               Book An Appointment
               <img class="h-4" src="/images/icons/ArrowUpRightWhite.svg" alt="Book An Appointment">
