--- a/src/partners/index.njk
+++ b/src/partners/index.njk
@@ -667,7 +667,7 @@
       <!-- Right column: HubSpot embed -->
       <div class="pssCtaRight">
         <div id="partner-apply" class="pssFormWrap threeSteps__ctaEmbed" style="border-radius:16px; overflow:hidden; clip-path:inset(0 round 16px); -webkit-mask-image:-webkit-radial-gradient(white, black); scroll-margin-top: 96px;">
-          <div class="meetings-iframe-container" data-src="https://meetings-na2.hubspot.com/brandon-williams/right-fit-intro?embed=true&embedType=inline&hideEventTypeDetails=false&hideGdprBanner=true" style="border-radius:16px; overflow:hidden; clip-path:inset(0 round 16px); -webkit-mask-image:-webkit-radial-gradient(white, black);"></div>
+          <div class="meetings-iframe-container" data-src="https://meetings-na2.hubspot.com/mike-rogan?uuid=06cc7a32-2606-43bd-a3fc-cb9aebaafec4&embed=true&embedType=inline&hideEventTypeDetails=false&hideGdprBanner=true" style="border-radius:16px; overflow:hidden; clip-path:inset(0 round 16px); -webkit-mask-image:-webkit-radial-gradient(white, black);"></div>
         </div>
         <script type="text/javascript" src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js"></script>
         <script>
